Updated about page and project settings

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>About</h1>
-              <p class="mb-0">Ambitious and detail-oriented Computer Science graduate passionate about leveraging technical skills to develop impactful software solutions.</p>
+              <p class="mb-0">Digital Marketing Specialist & Frontend Developer crafting data-driven strategies and building engaging web experiences</p>
             </div>
           </div>
         </div>
@@ -113,9 +113,9 @@
             <img src="assets/img/4.jpg" class="img-fluid" alt="Evans Kamau">
           </div>
           <div class="col-lg-8 content">
-            <h2>Web Developer &amp; Digital Marketer</h2>
+            <h2>Digital Marketing Specialist &amp; Web developer</h2>
             <p class="fst-italic py-3">
-              Results-driven Computer Science graduate skilled in web development, network administration, and digital marketing with practical experience in building responsive web applications.
+              I combine data-driven marketing strategies with technical web development skills to create comprehensive digital solutions that drive growth and engagement.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -136,11 +136,11 @@
               </div>
             </div>
             <p class="py-3">
-              A passionate graduate with a Bachelor's degree in Mathematics and Computer Science from Kirinyaga University. 
-              Currently advancing technical and marketing expertise through the eMobilis Web Development Scholarship and 
-              Generation Kenya Digital Marketing Program. Recognized for leadership, teamwork, and problem-solving abilities 
-              across IT, construction, and community projects.
+              I am a results-driven professional with a Bachelor's degree in Mathematics and Computer Science, specializing in the intersection of digital marketing and web development. My expertise includes crafting data-driven marketing strategies using SEO, Social Media Marketing, and Meta Ads, while also building responsive, user-friendly web applications with React.js, Django, and Bootstrap. Currently advancing my skills through Generation Kenya's Digital Marketing Program and eMobilis Web Development Scholarship, I bring a unique combination of technical and strategic thinking to every project.
             </p>
+              <p>
+                   My approach focuses on creating seamless digital experiences that not only look great but also deliver measurable business results through optimized performance and targeted engagement strategies.
+              </p>
           </div>
         </div>
 
